--- a/devel/git-extras/Makefile
+++ b/devel/git-extras/Makefile
@@ -1,13 +1,14 @@
 # $FreeBSD$
 
 PORTNAME=	git-extras
-PORTVERSION=	4.4.0
+PORTVERSION=	4.7.0
 CATEGORIES=	devel
 
 MAINTAINER=	igor.ostapenko@gmail.com
 COMMENT=	Sub-commands for repo summary, repl, changelog population, and more
 
 LICENSE=	MIT
+LICENSE_FILE=	${WRKSRC}/LICENSE
 
 RUN_DEPENDS=	git:devel/git \
 		bash:shells/bash
@@ -18,5 +19,6 @@ USE_GITHUB=	yes
 GH_ACCOUNT=	tj
 
 NO_BUILD=	yes
+NO_ARCH=	yes
 
 .include <bsd.port.mk>
