lab: Update automatic setup

--- a/_lab/audumbla.conf
+++ b/_lab/audumbla.conf
@@ -1,8 +1,9 @@
+#!/bin/sh audumbla iaarch64/portslab
 # portslab root disk auto configuration
 
 installer-host:
 
-$ echo 'kern.hz=100' >> /destdir/boot/loader.conf
+#$ echo 'kern.hz=100' >> /destdir/boot/loader.conf # obsolete
 $ echo 'autoboot_delay=1' >> /destdir/boot/loader.conf
 
 $ echo 'ifconfig_DEFAULT="DHCP"' > /destdir/etc/rc.conf
